--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,3 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+{{#resize-text}}
+Welcome to an automatically resizing ember headline...
+{{/resize-text}}
