renamed container to containerElement because of an ember 2.12 lts incomptibility

--- a/tests/dummy/app/templates/components/resizing-component.hbs
+++ b/tests/dummy/app/templates/components/resizing-component.hbs
@@ -1,3 +1,3 @@
-{{#resize-text minSize=12 maxSize=40 containter=element tagName=h2}}
+{{#resize-text minSize=12 maxSize=40 containterElement=element tagName=h2}}
   <a href="#">resizing link text</a>
 {{/resize-text}}
