--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,7 +1,8 @@
 <h1>block usage</h1>
-<pre>\{{#resize-text}}
-  Welcome to an automatically resizing ember headline...
-\{{/resize-text}}
+<pre>
+  &#123;&#123;#resize-text&#125;&#125;
+      Welcome to an automatically resizing ember headline...
+  &#123;&#123;/#resize-text&#125;&#125;
 </pre>
 
 {{#resize-text}}
