--- a/tests/dummy/app/templates/components/resizing-component.hbs
+++ b/tests/dummy/app/templates/components/resizing-component.hbs
@@ -1,3 +1,3 @@
-{{#resize-text minSize=12 maxSize=40 containterElement=element tagName=h2}}
-  <a href="#">resizing link text</a>
+{{#resize-text minSize=8 maxSize=32 containterElement=element tagName=h2}}
+  <a href="#">a link description that should be resized when space is not sufficient</a>
 {{/resize-text}}
